# arcgs

./: .env  .env.example  .gitignore  README.md  pyproject.toml
arcgs/: __init__.py  cli.py  config.py  pipeline.py  tools.py
arcgs/backend/: __init__.py  detect.py
arcgs/stages/: export.py  extract.py  sfm.py  train.py  train_gsplat.py
arcgs/viewer/: __init__.py  dashboard.py  pipeline_controller.py  serve.py
arcgs/viewer/static/: base.css  base.js  components.js
arcgs/viewer/templates/: dashboard.html  gallery.html  image_edit.html  training.html
config/: defaults.toml
